Endpoint to book tickets (#2)
* Add repo for booking

* Add service

* Add Handler

* Readme

---------
