# docs/swagger.json
@@ -4,6 +4,45 @@
         "contact": {}
     },
     "paths": {
+        "/bookings": {
+            "post": {
+                "security": [
+                    {
+                        "JWTAuth": []
+                    }
+                ],
+                "description": "book tickets.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "booking"
+                ],
+                "summary": "book tickets",
+                "parameters": [
+                    {
+                        "description": "body request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/booking.BookBodyRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success booking",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.SuccessMessageResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/concerts": {
             "get": {
                 "security": [
@@ -44,7 +83,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Activity detail retrieved successfully",
+                        "description": "retrieve concerts successfully",
                         "schema": {
                             "$ref": "#/definitions/serializer.SuccessResponse-serializer_ConcertResponse"
                         }
@@ -54,6 +93,21 @@
         }
     },
     "definitions": {
+        "booking.BookBodyRequest": {
+            "type": "object",
+            "required": [
+                "concert_id",
+                "quantity"
+            ],
+            "properties": {
+                "concert_id": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
         "serializer.ConcertResponse": {
             "type": "object",
             "properties": {
@@ -79,6 +133,22 @@
                 },
                 "total": {
                     "type": "integer"
+                }
+            }
+        },
+        "serializer.MessageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "serializer.SuccessMessageResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/serializer.MessageResponse"
                 }
             }
         },
